# osnr-and-spectral-overlapping-estimation-mtgp-3x32gbaud

./: .gitignore  01_CountingVectorsFeatures.py  01_ProbabilisticFeatures.ipynb  02_General_GP_Training_Evaluation.py  02_General_MTGP_Training_Evaluation.py  02_MOGP_Training_Evaluation.ipynb  02_MTGP_Training_Evaluation.py  02_Specific_MTGP_Training_Evaluation.py  03_Comparison.py  AGENT.md  README.md  pyproject.toml  requirements.txt  utils.py
processed_data/: .gitignore
scripts/: evaluate.py  train.py
src/models/: mixed_gp.py
src/utils/: data_loader.py
