[project]
name = "osnr-and-spectral-overlapping-estimation-mogp-3x32gbaud"
version = "0.1.0"
description = "Graduation work for telecommunications engineering in University of Antioquia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gdown>=5.2.0",
    "gpytorch>=1.14.3",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
