[project]
name = "osnr-and-spectral-overlapping-estimation-mogp-3x32gbaud"
version = "1.0.0"
description = "Multitask Gaussian Processes for Nyquist-WDM OSNR and Spectral Overlapping Estimation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpytorch>=1.15.2",
    "marimo>=0.20.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
